deploy: add avrdude hacks for ChipKit32
Signed-off-by: Andrew 'Necromant' Andrianov <andrew@ncrmnt.org>

--- a/deploy/avrdude/Makefile
+++ b/deploy/avrdude/Makefile
@@ -12,6 +12,23 @@ ifeq ($(CONFIG_DEPLOY_AVRDUDE_OVR),y)
 MCU:=$(call unquote,$(CONFIG_DEPLOY_AVRDUDE_PART))
 endif
 
+# Yes, freaky people use avrdude for pic32
+# We even ship an avrdude.conf for those
+ifeq ($(CONFIG_ARCH_PIC32),y)
+	AVRDUDE_EXTRA=-C $(ANTARES_INSTALL_DIR)/extra/avrdude.pic32.conf
+endif
+
+RESETCMD:=
+ifeq ($(CONFIG_DEPLOY_AVRDUDE_RESET),y)
+	RESETCMD:= $(root) $(ANTARES_INSTALL_DIR)/scripts/serial_reset.sh \
+		$(CONFIG_DEPLOY_AVRDUDE_PORT); sleep 1
+endif
+
+ifeq ($(CONFIG_DEPLOY_AVRDUDE_SER),y)
+	AVRDUDE_EXTRA+=-P $(CONFIG_DEPLOY_AVRDUDE_PORT) 
+	AVRDUDE_EXTRA+=-b $(CONFIG_DEPLOY_AVRDUDE_BAUDRATE)
+endif
+
 FUSES:=
 
 ifeq ($(CONFIG_DEPLOY_AVRDUDE_FSLOW),y)
@@ -32,10 +49,12 @@ endif
 
 
 avrdude:
-	$(root) avrdude -c $(PROG) -p $(MCU) $(call unquote,$(CONFIG_DEPLOY_AVRDUDE_COMMANDLINE)) -U flash:w:$(TARGET_HEXFILE)
+	$(RESETCMD)
+	$(root) avrdude $(AVRDUDE_EXTRA) -c $(PROG) -p $(MCU) $(call unquote,$(CONFIG_DEPLOY_AVRDUDE_COMMANDLINE)) -U flash:w:$(TARGET_HEXFILE)
 
 
 avrdude-fuses:
-	$(root) avrdude -c $(PROG) -p $(MCU) $(call unquote,$(CONFIG_DEPLOY_AVRDUDE_COMMANDLINE)) $(FUSES)
+	$(RESETCMD)
+	$(root) avrdude $(AVRDUDE_EXTRA) -c $(PROG) -p $(MCU) $(call unquote,$(CONFIG_DEPLOY_AVRDUDE_COMMANDLINE)) $(FUSES)
 
 
